--- a/packages/dashboard/src/css/app.scss
+++ b/packages/dashboard/src/css/app.scss
@@ -1,6 +1,6 @@
 // app global css in SCSS form
-.bg-green {
-  background-color: #4CAE4F;
+.bg-primary {
+  background-color: #423fad;
 }
 
 $xs-breakpoint: 718px;
